@@ -4419,6 +4419,15 @@ $Id: disambiguation.xml,v 1.45 2010-09-25 11:55:08 milek_pl Exp $
     <disambig action="immunize"/>
     </rule>
 
+    <rule name="Immunize 'World Wide Web'" id="WORLD_WIDE_WEB">
+      <pattern>
+        <token>World</token>
+        <token>Wide</token>
+        <token>Web</token>
+      </pattern>
+      <disambig action="immunize"/>
+    </rule>
+
 </rules>
  
  
