@@ -50,6 +50,9 @@ LanguageTool Change Log
      * afterTheDeadlineLanguage - code of default language if mode is set to 'AfterTheDeadline'
      NOTE: the 'AfterTheDeadline' mode should be considered experimental for now.
 
+-Internals:
+    -The compound rule now ignores tokens that have been immunized in the disambiguation.xml
+
 
 2.6 (2014-06-30)
 
